# flydigi-vader5

./: .clang-tidy  .gitignore  99-vader5.rules  CMakeLists.txt  CONTRIBUTING.md  README.md  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.toml  gamecontrollerdb.txt  test-elite-default.toml  test-elite-false.toml  test-elite-true.toml  test-remap.toml  test-toggle.toml
docs/: configuration.md  protocol.md
driver/: .gitignore  Makefile  dkms.conf  hid-flydigi.c  install.sh
include/vader5/: config.hpp  debug.hpp  debug_options.hpp  gamepad.hpp  hidraw.hpp  keycodes.hpp  mouse.hpp  protocol.hpp  transport.hpp  types.hpp  uinput.hpp
install/: 99-vader5-systemd.rules  install.sh
openspec/: project.md
openspec/changes/add-24g-protocol/: proposal.md
openspec/changes/add-ci-build/: proposal.md  tasks.md
openspec/changes/add-config-cli/: design.md  proposal.md  tasks.md
openspec/changes/add-config-cli/specs/config-cli/: spec.md
openspec/changes/add-core-driver/: proposal.md  tasks.md
openspec/changes/add-core-driver/specs/driver/: spec.md
openspec/changes/add-debug-tool/: proposal.md
openspec/changes/add-kernel-driver/specs/driver/: spec.md
openspec/changes/add-key-mapping/: proposal.md  tasks.md
openspec/changes/add-remap-system/: design.md  tasks.md
openspec/changes/add-remap-system/specs/remap-system/: spec.md
openspec/changes/add-rumble-support/: tasks.md
openspec/changes/add-rumble-support/specs/driver/: spec.md
openspec/changes/add-tui/: tasks.md
openspec/changes/add-uinput-ff-support/: design.md  proposal.md  tasks.md
openspec/changes/add-uinput-ff-support/specs/driver/: spec.md
openspec/changes/allow-flexible-stick-modes/: design.md  proposal.md  tasks.md
openspec/changes/allow-flexible-stick-modes/specs/remap-system/: spec.md
openspec/changes/archive/2026-01-02-add-24g-protocol/: tasks.md
openspec/changes/archive/2026-01-02-add-controller-remap/: proposal.md  tasks.md
openspec/changes/archive/2026-01-02-add-controller-remap/specs/controller-config/: spec.md
openspec/changes/archive/2026-01-02-add-debug-tool/: tasks.md
openspec/changes/archive/2026-01-02-add-extended-input/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-02-add-extended-input/specs/extended-input/: spec.md
openspec/changes/archive/2026-01-02-add-kernel-driver/: proposal.md  tasks.md
openspec/changes/archive/2026-01-02-add-libusb/: proposal.md  tasks.md
openspec/changes/archive/2026-01-02-add-remap-system/: proposal.md  tasks.md
openspec/changes/archive/2026-01-02-add-remap-system/specs/remap/: spec.md
openspec/changes/archive/2026-01-02-add-rumble-support/: design.md  proposal.md
openspec/changes/archive/2026-01-02-add-tui/: proposal.md
openspec/changes/archive/2026-01-02-refactor-project-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-02-refactor-project-structure/specs/project-structure/: spec.md
openspec/changes/archive/2026-01-02-use-libevdev/: proposal.md  tasks.md
openspec/changes/archive/2026-01-06-add-remap-system/: proposal.md  tasks.md
openspec/changes/archive/2026-01-06-add-remap-system/specs/remap-system/: spec.md
openspec/changes/archive/2026-01-06-fix-remap-suppression/: proposal.md
openspec/changes/archive/2026-01-06-fix-remap-suppression/specs/remap-system/: spec.md
openspec/changes/fix-debug-tool/: proposal.md  tasks.md
openspec/changes/fix-driver-interface-filter/: design.md  proposal.md  tasks.md
openspec/changes/fix-driver-interface-filter/specs/hid-driver/: spec.md
openspec/changes/fix-remap-suppression/: proposal.md  tasks.md
openspec/changes/fix-remap-suppression/specs/remap-system/: spec.md
openspec/changes/led-control/: proposal.md  tasks.md
openspec/changes/led-control/specs/led/: spec.md
openspec/changes/refactor-architecture/: proposal.md
openspec/changes/tap-to-activate/: proposal.md  tasks.md
openspec/changes/tap-to-activate/specs/remap-system/: spec.md
openspec/specs/debug-tool/: spec.md
openspec/specs/driver/: spec.md
openspec/specs/extended-input/: spec.md
openspec/specs/project-structure/: spec.md
openspec/specs/remap-system/: spec.md
research/: architecture.md  dsu-protocol.md  extended-buttons.md  protocol.md  test-mode-questions.md  vader3-analysis.md
scripts/: build.sh  unbind-xpad.sh
src/: config.cpp  debug.cpp  gamepad.cpp  hidapi_device.cpp  hidraw.cpp  keycodes.cpp  mouse.cpp  transport.cpp  uinput.cpp
src/daemon/: main.cpp
src/tools/: debug.cpp  test_debug_iface.cpp  test_remap.cpp  test_uinput_elite.cpp
